# self-tracker

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  wsgi.py
api/: __init__.py
api/config/: __init__.py
api/constants/: __init__.py
api/exceptions/: __init__.py  auth.py  user.py
api/model/: __init__.py  user.py
api/routes/: __init__.py  auth.py  routes_utils.py  status.py  user.py
api/schema/: enums.py  validation.py
api/service/: error_handler.py  user.py
api/service/handlers/: authentication.py  error_handler.py
api/util/: logger.py  utils.py
tests/: test_api_version.py
