[tool.poetry]
name = "self-tracker"
version = "0.1.0"
description = "This is backend for self-tracker application which can track all your personal ongoings ;)"
authors = ["Pratik Ghodke <pratik.ghodke@sarvaha.com>"]
readme = "README.md"
packages = [{include = "self_tracker"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
pydantic = "^1.10.5"
flask-sqlalchemy = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
