[tool.poetry]
name = "self-tracker"
version = "0.1.0"
description = "This is backend for self-tracker application which can track all your personal ongoings ;)"
authors = ["Pratik Ghodke <pratik.ghodke@sarvaha.com>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
pydantic = {extras = ["email"], version = "^1.10.5"}
flask-sqlalchemy = "^3.0.3"
flask-restful = "^0.3.9"
flask-cors = "^3.0.10"
gunicorn = "^20.1.0"
flask-pydantic = "^0.11.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
black = "^23.1.0"
pylint = "^2.16.3"
pytest = "^7.2.2"
coverage = "^7.2.1"
pytest-cov = "^4.0.0"

[tool.pylint.messages_control]
disable = "W1203"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
